# profile-fill-assistant

./: .gitignore  AGENTS.md  DESIGN-1.md  README.md  bts.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/server/src/: index.ts
apps/web/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: index.css
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: lib.rs  main.rs
apps/web/src/components/: header.tsx  loader.tsx  mode-toggle.tsx
apps/web/src/lib/: profile.ts
apps/web/src/routes/: __root.tsx  index.tsx
apps/web/src/utils/: trpc.ts
docs/: README.md
docs/prototype/: index.md
docs/requirements/: pages.md  prd.md  user-stories.md
docs/tech/: sqlite-schema-visualizer.html  sqlite-schema.md
docs/ui/: scan-entry.html
