[package]
name = "profile-fill-assistant"
version = "0.1.0"
description = "Local-first desktop profile assistant"
authors = ["joel"]
edition = "2021"

[lib]
name = "profile_fill_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
